# lgtm

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  lgtm.allium  package-lock.json  package.json  pyproject.toml
examples/: lgtm.yml
schemas/: lgtm-config.schema.json  reviewer-output.schema.json
scripts/: approve-pr-when-clean.mjs  approve_pr_when_clean.py  build-trusted-reviewer-inputs.mjs  build_trusted_reviewer_inputs.py  collect-pr-finding-memory.mjs  consensus.mjs  consensus.py  dismiss_approval.py  dismiss_bot_approvals_on_failure.py  find-prior-ledger-run.mjs  find_prior_ledger_run.py  load-trusted-review-config.mjs  load_trusted_review_config.py  normalize-reviewer-output.mjs  normalize_reviewer_output.py  parse_lgtm_rerun_command.py  persist-consensus-artifacts.mjs  persist_consensus_artifacts.py  prepare-prior-ledger.mjs  prepare_prior_ledger.py  resolve_pull_request_metadata.py  run-reviewers-parallel.mjs  run_reviewers_parallel.py  upsert-pr-comment.mjs  upsert_pr_comment.py
tests/: test_approve_pr_when_clean.py  test_build_trusted_reviewer_inputs.py  test_consensus.py  test_consensus_core.py  test_consensus_renderer.py  test_dismiss_approval.py  test_dismiss_bot_approvals_on_failure.py  test_finding_id.py  test_findings_ledger.py  test_lgtm_config_schema.py  test_normalize_reviewer_output.py  test_parse_lgtm_rerun_command.py  test_prepare_prior_ledger.py  test_resolve_pull_request_metadata.py  test_reviewer_core.py  test_reviewers_json.py  test_run_reviewers_parallel.py  test_upsert_pr_comment.py  test_workflows_contract.py
(+67 files in other folders)
